--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.14",
     "@prisma/client": "^6.4.1",
+    "@types/video-react": "^0.15.8",
+    "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "filesize": "^10.1.6",
+    "lucide-react": "^0.475.0",
     "next": "15.1.5",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "types": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,6 +34,7 @@
     "postcss": "^8",
     "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
